# Hack-style-Type-Checker

./: .gitignore  README.md  hack-type-checker.cabal  package.json  tsconfig.json
src/: AST.hs  TypeChecker.hs  ast.ts  checker.ts  result.ts  types.ts
test/: Main.hs  Properties.hs
